Fixed mathod naming
